--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "This repository will host the Global Fishing Watch client application developed by Vizzuality",
   "main": "server.js",
   "scripts": {
-    "test": "npm run lint-js && npm run lint-sass",
-    "lint-sass": "sass-lint -v -q",
-    "lint-js": "./node_modules/.bin/eslint -c .eslintrc --ext .jsx,.js app",
-    "lint:js": "npm run lint-js",
+    "analyze-bundle": "webpack --config ./config/webpack.config.js --json | webpack-bundle-size-analyzer",
     "build": "webpack --config ./config/webpack.config.js --progress --profile --colors",
-    "analyze-bundle": "webpack --config ./config/webpack.config.js --json | webpack-bundle-size-analyzer"
+    "lint-js": "./node_modules/.bin/eslint -c .eslintrc --ext .jsx,.js app",
+    "lint-sass": "sass-lint -v -q",
+    "lint:js": "npm run lint-js",
+    "server": "npm run build && npm start",
+    "test": "npm run lint-js && npm run lint-sass"
   },
   "repository": {
     "type": "git",
