--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
     "d3": "^4.10.0",
+    "d3-geo": "^1.6.4",
     "dotenv": "^4.0.0",
     "iso-3166-1-alpha-2": "^1.0.0",
     "lodash": "^4.17.4",
@@ -48,6 +49,7 @@
     "react-transition-group": "^2.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "topojson-client": "^3.0.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
