--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-paginate": "^4.4.3",
     "react-redux": "^5.0.6",
     "react-responsive": "^1.3.4",
+    "react-select": "^1.0.0-rc.10",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "topojson-client": "^3.0.0",
