--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "iso-3166-1-alpha-2": "^1.0.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "pbf": "^3.1.0",
     "pixi.js": "^4.5.4",
     "platform": "^1.3.4",
     "promise-polyfill": "^6.0.2",
@@ -49,6 +50,7 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "topojson-client": "^3.0.0",
+    "vector-tile": "^1.3.0",
     "velocity-react": "^1.3.3",
     "whatwg-fetch": "^2.0.3"
   },
