--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-redux": "^5.0.6",
     "react-responsive": "^1.3.4",
     "react-select": "^1.0.0-rc.10",
+    "react-tooltip": "^3.4.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "topojson-client": "^3.0.0",
