--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "topojson-client": "^3.0.0",
     "vector-tile": "^1.3.0",
     "velocity-react": "^1.3.3",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.3",
+    "globalfishingwatch-convert": "git@github.com:Vizzuality/GlobalFishingWatch-convert.git"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
