--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "redux-thunk": "^2.2.0",
     "topojson-client": "^3.0.0",
     "velocity-react": "^1.3.3",
-    "whatwg-fetch": "^2.0.3",
-    "globalfishingwatch-convert": "git+https://github.com/GlobalFishingWatch/map-convert.git"
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
