--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "topojson-client": "^3.0.0",
     "vector-tile": "^1.3.0",
     "velocity-react": "^1.3.3",
+    "viewport-mercator-project": "^5.0.1",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
