--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "global-fishing-watch",
   "version": "2.4.0",
-  "description": "This repository will host the Global Fishing Watch client application developed by Vizzuality",
+  "description": "This repository hosts the Global Fishing Watch client application.",
   "main": "server.js",
   "scripts": {
     "analyze-bundle": "webpack --config ./config/webpack.config.js --json | webpack-bundle-size-analyzer",
@@ -18,7 +18,7 @@
   "keywords": [
     "visualisation"
   ],
-  "author": "Vizzuality <hello@vizzuality.com>",
+  "author": "GlobalFishingWatch <support@globalfishingwatch.org>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/GlobalFishingWatch/map-client/issues"
