--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "d3": "^4.10.0",
     "dotenv": "^4.0.0",
     "globalfishingwatch-convert": "git+https://github.com/GlobalFishingWatch/map-convert.git",
+    "immutable": "^3.8.2",
     "iso-3166-1-alpha-2": "^1.0.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
