--- a/package.json
+++ b/package.json
@@ -28,16 +28,18 @@
   "dependencies": {
     "@mapbox/tile-cover": "^3.0.2",
     "@turf/area": "^6.0.1",
-    "@turf/helpers": "^6.0.1",
     "@turf/bbox": "^6.0.1",
+    "@turf/helpers": "^6.0.1",
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
     "d3": "^4.10.0",
+    "d3-ease": "^1.0.3",
     "dotenv": "^4.0.0",
     "globalfishingwatch-convert": "git+https://github.com/GlobalFishingWatch/map-convert.git",
     "immutable": "^3.8.2",
     "iso-3166-1-alpha-2": "^1.0.0",
     "lodash": "^4.17.4",
+    "mapbox-gl": "^0.45.0",
     "moment": "^2.18.1",
     "pbf": "^3.1.0",
     "pixi.js": "^4.7.1",
