--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "classnames": "^2.2.5",
     "d3": "^4.10.0",
     "dotenv": "^4.0.0",
+    "globalfishingwatch-convert": "git+https://github.com/GlobalFishingWatch/map-convert.git",
     "iso-3166-1-alpha-2": "^1.0.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
@@ -52,8 +53,7 @@
     "topojson-client": "^3.0.0",
     "vector-tile": "^1.3.0",
     "velocity-react": "^1.3.3",
-    "whatwg-fetch": "^2.0.3",
-    "globalfishingwatch-convert": "git+https://github.com/GlobalFishingWatch/map-convert.git"
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
