--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,8 @@
     "SITE_URL": true,
     "TIMEBAR_DATA_URL": true,
     "V2_API_ENDPOINT": true,
-    "WELCOME_MODAL_COOKIE_KEY": true
+    "WELCOME_MODAL_COOKIE_KEY": true,
+    "AS_MODULE": true
   },
   "parserOptions": {
     "ecmaVersion": 7,
