--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/GlobalFishingWatch/map-client#readme",
   "dependencies": {
     "@mapbox/tile-cover": "^3.0.2",
+    "@mapbox/vector-tile": "^1.3.0",
     "@turf/area": "^6.0.1",
     "@turf/bbox": "^6.0.1",
     "@turf/helpers": "^6.0.1",
@@ -62,7 +63,6 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "topojson-client": "^3.0.0",
-    "vector-tile": "^1.3.0",
     "velocity-react": "^1.3.3",
     "viewport-mercator-project": "^5.0.1",
     "whatwg-fetch": "^2.0.3"
