--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "webpack-dev-middleware": "^1.12.0"
   },
   "engines": {
-    "node": "8.2.x",
-    "npm": "5.3.x"
+    "node": "> 8.2.x",
+    "npm": "> 5.3.x"
   }
 }
