--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "platform": "^1.3.4",
     "promise-polyfill": "^6.0.2",
     "prop-types": "^15.5.10",
-    "react": "15.6.1",
+    "react": "^16.5.2",
     "react-datepicker": "^0.46.0",
-    "react-dom": "^15.6.1",
+    "react-dom": "^16.5.2",
     "react-ga": "^2.2.0",
     "react-input-range": "^1.2.1",
     "react-map-gl": "^3.2.6",
