--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/GlobalFishingWatch/map-client#readme",
   "dependencies": {
+    "@globalfishingwatch/map-convert": "github:GlobalFishingWatch/map-convert",
     "@mapbox/tile-cover": "^3.0.2",
     "@turf/area": "^6.0.1",
     "@turf/bbox": "^6.0.1",
@@ -37,7 +38,6 @@
     "d3": "^4.10.0",
     "d3-ease": "^1.0.3",
     "dotenv": "^4.0.0",
-    "globalfishingwatch-convert": "git+https://github.com/GlobalFishingWatch/map-convert.git",
     "immutable": "^3.8.2",
     "iso-3166-1-alpha-2": "^1.0.0",
     "lodash": "^4.17.4",
