--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "analyze-bundle": "webpack --config ./config/webpack.config.js --json | webpack-bundle-size-analyzer",
     "build": "webpack --config ./config/webpack.config.js --progress --profile --colors",
     "build-force-prod": "NODE_ENV=production webpack --config ./config/webpack.config.js --progress --profile --colors",
-    "lint-js": "./node_modules/.bin/eslint -c .eslintrc --ext .jsx,.js app",
+    "lint-js": "./node_modules/.bin/eslint -c .eslintrc --ext .jsx,.js app/src",
     "lint-sass": "sass-lint -v -q",
     "lint:js": "npm run lint-js",
     "retrieve-workspace": "node ./bin/retrieve-workspace.js",
@@ -54,7 +54,7 @@
     "react-dom": "^16.5.2",
     "react-ga": "^2.2.0",
     "react-input-range": "^1.2.1",
-    "react-map-gl": "^3.2.6",
+    "react-map-gl": "3.2.10",
     "react-paginate": "^4.4.3",
     "react-redux": "^5.0.6",
     "react-responsive": "^1.3.4",
