--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-tooltip": "^3.4.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "reselect": "^4.0.0",
     "topojson-client": "^3.0.0",
     "velocity-react": "^1.3.3",
     "viewport-mercator-project": "^5.0.1",
