--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/GlobalFishingWatch/map-client#readme",
   "dependencies": {
     "@globalfishingwatch/map-convert": "github:GlobalFishingWatch/map-convert",
+    "@globalfishingwatch/map-miniglobe-component": "github:GlobalFishingWatch/map-miniglobe-component",
     "@mapbox/tile-cover": "^3.0.2",
     "@mapbox/vector-tile": "^1.3.0",
     "@turf/area": "^6.0.1",
