--- a/package.json
+++ b/package.json
@@ -62,10 +62,12 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "topojson-client": "^3.0.0",
+    "urijs": "^1.19.1",
     "vector-tile": "^1.3.0",
     "velocity-react": "^1.3.3",
     "viewport-mercator-project": "^5.0.1",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.3",
+    "wms-capabilities": "^0.3.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
