--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-dom": "^16.5.2",
     "react-ga": "^2.2.0",
     "react-input-range": "^1.2.1",
-    "react-map-gl": "3.2.10",
+    "react-map-gl": "^4.0.6",
     "react-paginate": "^4.4.3",
     "react-redux": "^5.0.6",
     "react-responsive": "^1.3.4",
