--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "redux-thunk": "^2.2.0",
     "topojson-client": "^3.0.0",
     "urijs": "^1.19.1",
+    "validator": "^10.11.0",
     "vector-tile": "^1.3.0",
     "velocity-react": "^1.3.3",
     "viewport-mercator-project": "^5.0.1",
