--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "@globalfishingwatch/map-colors": "github:GlobalFishingWatch/map-colors",
     "@globalfishingwatch/map-convert": "github:GlobalFishingWatch/map-convert",
-    "@globalfishingwatch/map-miniglobe-component": "github:GlobalFishingWatch/map-miniglobe-component",
+    "@globalfishingwatch/map-components": "^0.1.0",
     "@mapbox/tile-cover": "^3.0.2",
     "@mapbox/vector-tile": "^1.3.0",
     "@turf/area": "^6.0.1",
