--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@globalfishingwatch/map-colors": "github:GlobalFishingWatch/map-colors",
     "@globalfishingwatch/map-components": "^0.1.0",
     "@globalfishingwatch/map-convert": "github:GlobalFishingWatch/map-convert",
+    "@mapbox/geojson-extent": "^0.3.2",
     "@mapbox/tile-cover": "^3.0.2",
     "@mapbox/vector-tile": "^1.3.0",
     "@turf/area": "^6.0.1",
