--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint-js": "./node_modules/.bin/eslint -c .eslintrc --ext .jsx,.js app/src",
     "lint-sass": "sass-lint -v -q",
     "lint:js": "npm run lint-js",
+    "debug-server": "./app/src/_map/redux-debug-server.js",
     "retrieve-workspace": "node ./bin/retrieve-workspace.js",
     "postinstall": "npm run retrieve-workspace",
     "test": "npm run lint-js && npm run lint-sass"
@@ -106,6 +107,8 @@
     "node-sass": "^4.9.3",
     "postcss-loader": "^2.0.6",
     "pretty-error": "^2.1.1",
+    "remote-redux-devtools": "^0.5.16",
+    "remotedev-server": "^0.3.1",
     "resolve-url-loader": "^2.1.0",
     "sass-lint": "^1.10.2",
     "sass-loader": "^6.0.6",
