--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint-js": "./node_modules/.bin/eslint -c .eslintrc --ext .jsx,.js app/src",
     "lint-sass": "sass-lint -v -q",
     "lint:js": "npm run lint-js",
-    "debug-server": "./app/src/_map/redux-debug-server.js",
     "retrieve-workspace": "node ./bin/retrieve-workspace.js",
     "postinstall": "npm run retrieve-workspace",
     "test": "npm run lint-js && npm run lint-sass"
@@ -30,7 +29,7 @@
   "homepage": "https://github.com/GlobalFishingWatch/map-client#readme",
   "dependencies": {
     "@globalfishingwatch/map-colors": "github:GlobalFishingWatch/map-colors",
-    "@globalfishingwatch/map-components": "^0.1.0",
+    "@globalfishingwatch/map-components": "0.4.1",
     "@globalfishingwatch/map-convert": "github:GlobalFishingWatch/map-convert",
     "@mapbox/tile-cover": "^3.0.2",
     "@mapbox/vector-tile": "^1.3.0",
