--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
-  "presets": ["react", "es2015", "es2016", "es2017"],
-  "plugins": ["transform-object-rest-spread", "transform-class-properties", "transform-exponentiation-operator", "lodash"]
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": [
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-exponentiation-operator",
+    "lodash"
+  ]
 }
