--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/GlobalFishingWatch/map-client#readme",
   "dependencies": {
     "@globalfishingwatch/map-colors": "github:GlobalFishingWatch/map-colors",
-    "@globalfishingwatch/map-components": "^0.1.0",
+    "@globalfishingwatch/map-components": "1.6.0",
     "@globalfishingwatch/map-convert": "github:GlobalFishingWatch/map-convert",
     "@mapbox/tile-cover": "^3.0.2",
     "@mapbox/vector-tile": "^1.3.0",
