--- a/package.json
+++ b/package.json
@@ -81,10 +81,16 @@
     "http-server": "^0.11.1",
     "husky": "^1.3.1",
     "imagemin-lint-staged": "^0.4.0",
+    "lint-staged": "^8.1.5",
     "node-sass": "^4.11.0",
     "prettier": "^1.16.4",
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "browserslist": [
     ">0.2%",
