--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "promise-polyfill": "^6.0.2",
     "prop-types": "^15.5.10",
     "react": "^16.8.6",
+    "react-app-polyfill": "^0.2.2",
     "react-datepicker": "^0.46.0",
     "react-dom": "^16.8.6",
     "react-ga": "^2.2.0",
