--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "http-server ./build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "retrieve-workspace": "node ./bin/retrieve-workspace.js",
     "postinstall": "npm run retrieve-workspace"
   },
@@ -85,6 +86,7 @@
     "lint-staged": "^8.1.5",
     "node-sass": "^4.11.0",
     "prettier": "^1.16.4",
+    "source-map-explorer": "^1.8.0",
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0"
   },
