--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "homepage": ".",
   "dependencies": {
-    "@globalfishingwatch/map-components": "1.8.1",
+    "@globalfishingwatch/map-components": "GlobalFishingWatch/map-components#map-interaction-refacto-dist",
     "@globalfishingwatch/map-convert": "github:GlobalFishingWatch/map-convert",
     "@mapbox/tile-cover": "^3.0.2",
     "@mapbox/vector-tile": "^1.3.0",
