--- a/.env.sample
+++ b/.env.sample
@@ -15,6 +15,7 @@ REACT_APP_GOOGLE_TAG_MANAGER_KEY=
 REACT_APP_WELCOME_MODAL_COOKIE_KEY=
 REACT_APP_TIMEBAR_DATA_URL=
 REACT_APP_V2_API_ENDPOINT=
+REACT_APP_SEARCH_ENDPOINT=
 REACT_APP_MAP_URL=
 REACT_APP_BLOG_URL=
 REACT_APP_SITE_URL=
