--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "@mapbox/vector-tile": "^1.3.0",
     "@turf/area": "^6.0.1",
     "@turf/bbox": "^6.0.1",
+    "@turf/great-circle": "^5.1.5",
     "@turf/helpers": "^6.0.1",
+    "@turf/length": "^6.0.2",
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
     "core-js": "^3.1.4",
