--- a/cloudbuild-PR.yaml
+++ b/cloudbuild-PR.yaml
@@ -4,22 +4,48 @@ steps:
     args:
       [
         'build',
+       '--build-arg',
+        'PUBLIC_URL=${_PUBLIC_URL}',
         '--build-arg',
-        'REACT_APP_DEPLOYED_VERSION=$SHORT_SHA',
+        'GENERATE_SOURCEMAP=${_GENERATE_SOURCEMAP}',
         '--build-arg',
-        'REACT_APP_LOGIN_FEATURE=$_REACT_APP_LOGIN_FEATURE',
+        'LITERALS_FILE=${_LITERALS_FILE}',
         '--build-arg',
-        'REACT_APP_API_AUTH=$_REACT_APP_API_AUTH',
+        'DEFAULT_WORKSPACE=${_DEFAULT_WORKSPACE}',
         '--build-arg',
-        'REACT_APP_API_EVENTS_ENDPOINT=$_REACT_APP_API_EVENTS_ENDPOINT',
+        'WORKSPACE_API_URL=${_WORKSPACE_API_URL}',
         '--build-arg',
-        'REACT_APP_API_VESSELS_ENDPOINT=$_REACT_APP_API_VESSELS_ENDPOINT',
+        'REACT_APP_FEATURE_FLAG_SUBSCRIPTIONS=${_REACT_APP_FEATURE_FLAG_SUBSCRIPTIONS}',
         '--build-arg',
-        'REACT_APP_API_SETTINGS_ENDPOINT=$_REACT_APP_API_SETTINGS_ENDPOINT',
+        'REACT_APP_FEATURE_TRANSLATIONS=${_REACT_APP_FEATURE_TRANSLATIONS}',
         '--build-arg',
-        'REACT_APP_GOOGLE_TAG_MANAGER_KEY=$_REACT_APP_GOOGLE_TAG_MANAGER_KEY',
+        'REACT_APP_COMPLETE_MAP_RENDER=${_REACT_APP_COMPLETE_MAP_RENDER}',
         '--build-arg',
-        'REACT_APP_DATASET_ID=$_REACT_APP_DATASET_ID',
+        'REACT_APP_DISABLE_WELCOME_MODAL=${_REACT_APP_DISABLE_WELCOME_MODAL}',
+        '--build-arg',
+        'REACT_APP_REQUIRE_MAP_LOGIN=${_REACT_APP_REQUIRE_MAP_LOGIN}',
+        '--build-arg',
+        'REACT_APP_SHOW_BANNER=${_REACT_APP_SHOW_BANNER}',
+        '--build-arg',
+        'REACT_APP_WELCOME_MODAL_COOKIE_KEY=${_REACT_APP_WELCOME_MODAL_COOKIE_KEY}',
+        '--build-arg',
+        'REACT_APP_TIMEBAR_DATA_URL=${_REACT_APP_TIMEBAR_DATA_URL}',
+        '--build-arg',
+        'REACT_APP_V2_API_ENDPOINT=${_REACT_APP_V2_API_ENDPOINT}',
+        '--build-arg',
+        'REACT_APP_BLOG_URL=${_REACT_APP_BLOG_URL}',
+        '--build-arg',
+        'REACT_APP_SITE_URL=${_REACT_APP_SITE_URL}',
+        '--build-arg',
+        'REACT_APP_MAP_URL=${_REACT_APP_MAP_URL}',
+        '--build-arg',
+        'REACT_APP_SHARE_BASE_URL=${_REACT_APP_SHARE_BASE_URL}',
+        '--build-arg',
+        'REACT_APP_GOOGLE_TAG_MANAGER_KEY=${_REACT_APP_GOOGLE_TAG_MANAGER_KEY}',
+        '--build-arg',
+        'BASIC_AUTH_USER=$_BASIC_AUTH_USER',
+        '--build-arg',
+        'BASIC_AUTH_PASS=$_BASIC_AUTH_PASS',
         '--target',
         'build',
         '-t',
