--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "dayjs": "^1.7.7",
     "dotenv": "^4.0.0",
     "immutable": "^3.8.2",
-    "iso-3166-1-alpha-2": "^1.0.0",
+    "iso-3166-1-alpha-2": "GlobalFishingWatch/iso-3166-1-alpha-2#taiwan_fix",
     "lodash": "^4.17.4",
     "mapbox-gl": "^0.53.0",
     "moment": "^2.18.1",
