--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,14 +21,22 @@ http {
         listen ${PORT};
         root /usr/share/nginx/www/;
 
-        location ~* ^/carrier-portal/(.+\..+)$ {
+        location ~* ^/map/(.+\..+)$ {
           alias /usr/share/nginx/www/$1;
         }
 
-        location /carrier-portal {
+        location /map {
           auth_basic ${BASIC_AUTH};
           auth_basic_user_file /etc/nginx/.htpasswd;
-          try_files /index.html =404;
+          index  index.html index.htm;
+          try_files $uri$args $uri$args/ $uri $uri/ /index.html =404;
+        }
+
+        location / {
+          auth_basic ${BASIC_AUTH};
+          auth_basic_user_file /etc/nginx/.htpasswd;
+          index  index.html index.htm;
+          try_files $uri$args $uri$args/ $uri $uri/ /index.html =404;
         }
     }
 }
