--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@globalfishingwatch/api-client": "0.0.21",
     "@globalfishingwatch/map-components": "3.1.1",
     "@globalfishingwatch/map-convert": "github:GlobalFishingWatch/map-convert",
+    "@globalfishingwatch/ui-components": "^1.1.0",
     "@mapbox/tile-cover": "3.0.2",
     "@mapbox/vector-tile": "1.3.0",
     "@turf/area": "6.0.1",
